--- a/BTL_QlBi_a/Views/Home/BanBia.cshtml
+++ b/BTL_QlBi_a/Views/Home/BanBia.cshtml
@@ -11,7 +11,7 @@
 
 @await Html.PartialAsync("~/Views/Home/Partials/QLBan_Bi_a/_QuanLyBan.cshtml", Model)
 @section Scripts {
-    <script src="~/asset/js/quanlyban.js"></script>
+    <script src="~/asset/js/qlban/quanlyban.js"></script>
     <script src="~/asset/js/qlban/datBan.js"></script>
     <script src="~/asset/js/qlban/banBiaManager.js"></script>
     <script>
