--- a/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_EditVtriBan.cshtml
+++ b/BTL_QlBi_a/Views/Home/Partials/QLBan_Bi_a/_EditVtriBan.cshtml
@@ -1,5 +1,5 @@
 ﻿@model BTL_QlBi_a.Models.Entities.BanBia
-
+<link rel="stylesheet" href="~/asset/css/qlBan/editBan.css" />
 <div class="ban-form-wrapper">
     <div class="form-header">
         <h3 class="form-title">✏️ Chỉnh sửa bàn: @Model.TenBan</h3>
@@ -140,7 +140,7 @@
     </form>
 </div>
 
-<style>
+@* <style>
     .status-display {
         padding: 15px;
         background: white;
@@ -220,4 +220,4 @@
             background: #c82333;
             transform: translateY(-2px);
         }
-</style>
+</style> *@
