--- a/BTL_QlBi_a/Views/Shared/_Sidebar.cshtml
+++ b/BTL_QlBi_a/Views/Shared/_Sidebar.cshtml
@@ -14,7 +14,7 @@
     </div>
     <ul class="nav-menu">
         <li class="nav-item">
-            <a class="nav-link" href="@Url.Action("Index", "Home")" data-tooltip="Quản lý bàn">
+            <a class="nav-link" href="@Url.Action("BanBia", "Home")" data-tooltip="Quản lý bàn">
                 <div class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
