--- a/BTL_QlBi_a/wwwroot/asset/css/index.css
+++ b/BTL_QlBi_a/wwwroot/asset/css/index.css
@@ -1,4 +1,4 @@
-* {
+﻿* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -667,6 +667,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    max-height:820px;
 }
 
 .panel-header {
@@ -747,7 +748,7 @@ body {
 
 /* Service List */
 .service-section {
-    margin: 15px 0;
+    margin: 0;
 }
 
 .section-subtitle {
