--- a/BTL_QlBi_a/Views/Shared/_Sidebar.cshtml
+++ b/BTL_QlBi_a/Views/Shared/_Sidebar.cshtml
@@ -34,7 +34,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="@Url.Action("HoaDon", "Home")" data-tooltip="Hóa đơn">
+            <a class="nav-link" href="@Url.Action("HoaDon", "HoaDon")" data-tooltip="Hóa đơn">
                 <div class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
@@ -44,7 +44,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="@Url.Action("KhachHang", "Home")" data-tooltip="Khách hàng">
+            <a class="nav-link" href="@Url.Action("KhachHang", "KhachHang")" data-tooltip="Khách hàng">
                 <div class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
